--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jspdf-html2canvas": "^1.4.9",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
+    "vue-sweetalert-icons": "^4.3.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
