--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^6.5.95",
+    "apexcharts": "^3.35.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
@@ -16,6 +17,7 @@
     "jspdf-html2canvas": "^1.4.9",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "^3.5.3",
     "vue-sweetalert-icons": "^4.3.1",
     "vuetify": "^2.6.0"
